sleep-custom.yaml
apiVersion: v1
kind: Service
metadata:
  name: sleep-google
  labels:
    app: sleep-google
    service: sleep-google
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: sleep-google
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep-google
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep-google
  template:
    metadata:
      labels:
        app: sleep-google
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: sleep-google
      containers:
      - name: sleep-google
        image: curlimages/curl
        command: ["/bin/sleep", "3650d"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/sleep/tls
          name: secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: sleep-secret
          optional: true
---
apiVersion: v1
kind: Service
metadata:
  name: sleep-yahoo
  labels:
    app: sleep-yahoo
    service: sleep-yahoo
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: sleep-yahoo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep-yahoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep-yahoo
  template:
    metadata:
      labels:
        app: sleep-yahoo
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: sleep-yahoo
      containers:
      - name: sleep-yahoo
        image: curlimages/curl
        command: ["/bin/sleep", "3650d"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/sleep/tls
          name: secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: sleep-secret
          optional: true
---
